--- a/index.html
+++ b/index.html
@@ -3,9 +3,5 @@
     <p id="para">Some text here</p>
     <button onclick="myFunction();">Click Me!</button>
   </body>
-  <script>
-  function myFunction() {
-    window.open("tel:+15678675309");
-  }
-  </script>
+  <script src="script.js"></script>
 </html>
