--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <body>
-    <p id="para">Some text here</p>
+    <p id="para">This text here</p>
     <button onclick="myFunction();">Click Me!</button>
   </body>
   <script src="script.js"></script>
