--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <body>
     <p id="para">This text here</p>
-    <button onclick="myFunction();">Click Me!</button>
+    <button onclick="myFunction();">Call Jenny!</button>
   </body>
   <script src="script.js"></script>
 </html>
